--- a/design.html
+++ b/design.html
@@ -123,20 +123,30 @@
         Not only do we plan on using AI based on optimized hardware, but Xythe comes with something that not many other robots can actively take advantage of: learning through conversation. Our robots are built to learn by conversing-- not only with owners and humans, but with other robots on a community/regional-based cloud network, where data from a simple weather forecast to a complex network of traffic times is shared, creating a collective base of knowledge that is constantly improving. 
 
         </p>
-        <p class="left" id="sec">
-          Glass was more of static projected screen so that your eye could read data, or notifications. It was initially more meant as an informative display, that is attached to your glasses, but once Google release the Mirror AP, third party developers were really able to create more application for the device. Many new applications hit the app store for the Glass, for example there was real time language translation apps, and various social networks reworked for Glass. In addition, Glass served many other one of a kind health care applications, such as storing electronic medical records, capturing the user's retinal informal for eye doctors, and even assisting surgeons in training.
+        <h2>The Fine Print, in Big Format</h2>
+         <p>
+           Model Xythe is an ongoing project. Perfection never comes in one shot. More importantly, our drive to revolutionize how we go through our day, is something shared by millions, if not billions of other people all over the world. Some for malicious purposes, some for good reason. As a result, Xythe is pursuing a concept often seen currently in the car industry from makers such as Tesla, where the hardware can be a one time buy, while the real innovation comes from frequent software updates. We have dubbed this method of consumer distribution as the “One and Done” method.</br>
 
-        </p>
-        <p class="right">
-          HoloLens, has put a big emphasis on industrial application, on its take of and augmented reality headset. The fact that the HoloLens can track movement, depth, and essentially map out a 3D space, this really opens up the possible applications. The Hololens can digitally embed tracked virtual objects in the real world visible via the headset. This means that 3D designers can view their models in say their office and walk around it. Another application, is repair work, rather than having a plumber come to your house, you get their video stream embedded into your field of vision, and they can point out what you need to do. Lastly, the HoloLens has one of kind gaming possibilities. Rather than being limited to a TV screen, the HoloLens captures data from your environment, to embed the game within environment.
-        </p>
-        <p class="left" id="third">
-          Google Glass  received a great deal of criticism and legislative action due to privacy and safety concerns. On January 15, 2015, Google announced that it would stop producing the Google Glass prototype. Costs began running too high, and development was beginning to slow down greatly as Google’s focus shifted to other aspects of virtual innovation.
+           Hacking is something we take very seriously, and with the One and Done method, we set ourselves up for long term retaliation and protection against any and all malicious attempts for interrupting regular function of Xythe, whether it be on the consumer side or the database side. Frequent software and security updates create a constantly evolving protection against errors and allow consumers to trust that if there ever is an issue, whether it be a bug or malicious virtual disruption, it can be resolved without “bricking” the entire robot module. Our regionally independent consumer robot cloud network will allow us to target specific issues in isolated areas, and also allows for easier handling of issues. Revolution through software is the future, and we have fully embraced this aspect of consumerism, making it not only cheaper, but more sensible to buy a Xythe. </br>
+           Our robot and AI engine strives to consistently abide by Isaac Asimov’s three laws of robotics:</br>
+ 
+            1. A robot may not injure a human being or, through inaction, allow a human being to come to harm.</br> 
+            2. A robot must obey orders given it by human beings except where such orders would conflict with the First Law. </br>
+            3. A robot must protect its own existence as long as such protection does not conflict with the First or Second Law. </br>
 
+            We conform to these laws through our regionally independent cloud systems. Thriving within completely independent systems, connecting to the mainframe only for software updates, allows us to not only isolate issues in specific populations, but prevent anything from getting out of hand.  As a result, even the most paranoid of us can sleep soundly at night, knowing there will not be any potential secret robot meetings going on in our living room.
         </p>
-        <p class="right">
-          Hololens is an ongoing project run by Microsoft in order to further develop the Augmented Reality field.  Because of the myriad of potential applications, it can be seen as a representation of where AR is going in the future. Microsoft is using Hololens as a medium to truly allow the AR market to take off and become a daily part of our lives. Although still in very minimal stages, Hololens has the potential to spur the creation of a plethora of different AR devices in our near future that help to improve our day- to - day lives. As of now, it's a 3000 dollar piece of equipment still in development.
+        <h2> Costs and Liabilities</h2>
+        <p>
+          We will be frank: The base asking price of Model Xythe is, $1500, which includes the robot, charging modules, lifetime software updates, a 2 year repair warranty, and a guide to taking full advantage of your new personal lifestyle assistant. </br>
+          We as a company continually strive to provide the best service for our consumers, but one may ask, “what about the hardware? What if it breaks or malfunctions?”. </br>
+          The average joes over here at Jackson Robotic Solutions hear you loud and clear, and this was one of the first things that popped in our mind during development. As a result, I present to you, the “donor system”.</br>
+
+          We operate on a “modular donor policy”, in which old or malfunctioning robots can be returned for newer or fixed models, and the returned robots are stripped of parts that can be used to replace or refurbish other robots. On the other hand, almost every part can be replaced or individually replaced with a new part, allowing costs to be kept down for any sort of maintenance or parts replacement. Our robots are meant to last for many years, but when it comes time for a new robot, we will happily compensate for any old robot sent back, as the parts will be reused for repairs in other models. 
+          The warranty does not hold us liable for any modifications conducted by unapproved Jackson Robotics Solutions providers and any attempt to do so WILL void warranties. The asking price may seem high, but is necessary for the research and development of a field of study that is soon to be an important facet of our daily lives.  To order, contact us at 425-385-7000 or visit one of our contracted suppliers! 
         </p>
+        <h1>Join the revolution for greatness, join Xythe. </h1>
+    
       </section>
       <section class="module content" id="vid">
         <div id="gan"><iframe src="http://www.youtube.com/embed/IRLhUH5SQVE"
