--- a/design.html
+++ b/design.html
@@ -39,25 +39,21 @@
       <section class="module content work">
         <div id="intro">
           <p>
-           We all remember the robot world of the Jetsons, with their robot servers, robot shop owners, and even robot animals.</p><p>
-            An average joe might call that pure fantasy. But we call it the approaching reality.</p><p>
-            Jackson Robotics Solutions is committed to making the impossible possible. To take the pin up poster utopia dream we have all seen and thought of, and turn it into our world today.</p><p>
+           We all remember the robot world of the Jetsons, with their robot servers, robot shop owners, and even robot animals. An average joe might call that pure fantasy. But we call it the approaching reality. Jackson Robotics Solutions is committed to making the impossible possible. To take the pin up poster utopia dream we have all seen and thought of, and turn it into our world today.</p><p>
           But an average joe might ask.</p><p>
           How?</br>
-          Two words. Artificial. Intelligence.</p><p>
+        Two words. <strong>Artificial. Intelligence. </strong></p><p>
           At Jackson Robotics Solutions, us average joes have not only asked these same questions, but have spent countless hours figuring out how to create an AI engine, paired with a robot that can actively aid in tasks that we could always need a little help in.</p><p>
-      So we present to you:</p>
-
-      <p> Model Xythe, a robot meant to help ameliorate the student and businessman lifestyle.</p> 
+      So we present to you Model Xythe, a robot meant to help ameliorate the student and businessman lifestyle.</p> 
         </div>
         
       </section>
       <section class="module">
-        <div class="emblem"><h1>Let Imagination Conquer Reality</h1></div>
+        <div class="emblem"><h1>Imagine for a moment</h1></div>
       </section>
       <section class="module content" id="app">
         <div id="Applications">
-          <h2>Imagine for a Moment</h2>
+          
           <p>
             Waking up in the morning, and quietly saying “Ok, can we get some 90s RnB up in here?”</br>
             As you turn over in bed, still half-asleep, smooth 90s RnB begins to play, and a voice asks “Do you need anything else?”</br>
