--- a/design.html
+++ b/design.html
@@ -62,6 +62,8 @@
             You tell it to “remind you of today’s agenda”</br>
             It regurgitates every single assignment, essay, test, and meeting you have scheduled for today.</br>
           </p>
+          <hr>
+
           <h3> <strong>The truth is, we discovered long ago that when used correctly, AI can make our lives easier, but in order to take advantage of this, we need to take a look at what Artificial Intelligence IS. </strong></h3>
 
           <p>
@@ -71,9 +73,11 @@
           <p>
             <strong>Available Technology: </strong> Despite the immense potential AI proves to envision, the technology available currently only skims the surface of the ocean of possibility. The current use of AI is subtle, in systems such as speech recognition in smartphones with developing smart assistants like Apple’s Siri and Samsung’s Bixby.
           </p>
-
-          <hr>
-          <h3>In terms of the raw principles surrounding Artificial Intelligence, current technology revolves around to basic ideas: Machine Learning and Neural Networks.</h3>
+</section>
+          <section class="module">
+            <div class="emblem"><h1>Current technology revolves around two basic ideas</h1></div>
+          </section>
+          <section class="module content" id="comp">
           <p>
 
             <strong> Machine Learning: </strong>] Machine Learning currently exists as our most common form of AI application. Essentially what occurs in this process, is the use of basic AI principles such as learning and uncovering trends from large amounts of data. Think of a coin sorter, but one that sorts millions on trillions of coins, in mere minutes. </br></p>
