--- a/design.html
+++ b/design.html
@@ -77,7 +77,7 @@
           <section class="module">
             <div class="emblem"><h1>Current technology revolves around two basic ideas</h1></div>
           </section>
-          <section class="module content" id="comp">
+          <section class="module content" id="compn">
           <p>
 
             <strong> Machine Learning: </strong>] Machine Learning currently exists as our most common form of AI application. Essentially what occurs in this process, is the use of basic AI principles such as learning and uncovering trends from large amounts of data. Think of a coin sorter, but one that sorts millions on trillions of coins, in mere minutes. </br></p>
