--- a/tsa.html
+++ b/tsa.html
@@ -99,39 +99,99 @@ TSA allows students with similar interests in the STEM field to come together, m
           <h2>Below is a listing of the awards Jackson students won at our most recent State Conference!</h2>
           <div id="awards">
           <p>
-            ARCHITECTURAL RENOVATION<br>
-TEAM<br>
-4th Karis Ho Henry M. Jackson High Team 2<br>
-4th Sriharshita Musunuri Henry M. Jackson High Team 2<br>
-4th Justine Teoh Henry M. Jackson High Team 2<br></p><p>
-BIOTECHNOLOGY DESIGN HIGH SCHOOL<br>
-TEAM<br>
-1st Karis Ho Henry M. Jackson High Team 3<br>
-1st Claire Hsu Henry M. Jackson High Team 3<br>
-1st Sriharshita Musunuri Henry M. Jackson High Team 3<br>
-1st Yuna Shin Henry M. Jackson High Team 3<br>
-1st Justine Teoh Henry M. Jackson High Team 3<br>
-3rd Kirsten Allison Henry M. Jackson High Team 1<br>
-3rd Natalia Gilbertson Henry M. Jackson High Team 1<br>
-3rd Brandon Rapp Henry M. Jackson High Team 1<br>
-3rd Andrew Stratford Henry M. Jackson High Team 1<br>
-3rd Jonathan Tan Henry M. Jackson High Team 1<br>
-3rd Serena Tran Henry M. Jackson High Team 1<br>
-4th Hannah Han Henry M. Jackson High Team 2<br>
-4th Alexis Kim Henry M. Jackson High Team 2<br>
-4th Anny Qiu Henry M. Jackson High Team 2<br></p><p>
-COMPUTER-AIDED DESIGN 2D, ARCHITECTURE<br>
-INDIVIDUAL<br>
-5th Andrew Hyun Henry M. Jackson High<br></p><p>
-DEBATING TECHNOLOGY ISSUES<br>
-TEAM<br>
-2nd Jean Kim Henry M. Jackson High Team 2<br>
-2nd Dhruvik Parikh Henry M. Jackson High Team 2<br></p><p>
+Architectural Design <br>
+1st Sriharshita Musunuri Henry M. Jackson High Team 0<br>
+1st Justine Teoh Henry M. Jackson High Team 0<br>
+1st Andrew Hyun Henry M. Jackson High Team 0<br>
 
-DIGITAL VIDEO PRODUCTION<br>
-TEAM<br>
-4th Marcus Amalachandran Henry M. Jackson High Team 1<br>
-4th Arkaprabha Bhattacharya Henry M. Jackson High Team 1<br>
+4th Louis Ta Henry M. Jackson High Team 1<br>
+4th Iman Haji Henry M. Jackson High Team 1<br>
+4th Dhruvik Parikh Henry M. Jackson High Team 1<br>
+
+Children’s Stories<br>
+5th Hannah Han Henry M. Jackson High Team 0<br> 
+5th Yenny Park Henry M. Jackson High Team 0 <br>
+5th Stella Kim Henry M. Jackson High Team 0 <br>
+5th Seo-yun Chon Henry M. Jackson High Team 0<br>
+
+Coding<br>
+3rd Kevin Liang Henry M. Jackson High Team 0<br> 
+3rd Marcus Amalachandran Henry M. Jackson High Team 0<br>
+
+Computer Integrated Manufacturing<br>
+4th Andrew Hyun Henry M. Jackson High Team 0<br>
+ 4th Ryan Chu Henry M. Jackson High Team 0<br>
+
+Computer Aided Design 2d : Architecture<br>
+4th Andrew Hyun Henry M. Jackson High<br>
+
+Debating Technological Issues<br>
+2nd Dhruvik Parikh Henry M. Jackson High Team 1<br> 
+2nd Ryan Chu Henry M. Jackson High Team 1<br>
+Digital Video Production<br>
+1st Ryan Chu Henry M. Jackson High Team 2<br> 
+1st Dhruvik Parikh Henry M. Jackson High Team 2<br> 
+1st Andrew Hyun Henry M. Jackson High Team 2 <br>
+1st Marcus Amalachandran Henry M. Jackson High Team 2 <br>
+1st Arkaprabha Bhattacharya Henry M. Jackson High Team 2<br>
+
+3rd Lam Pham Henry M. Jackson High Team 0 <br>
+3rd Niha Gaddam Henry M. Jackson High Team 0 <br>
+3rd Pranav Shekar Henry M. Jackson High Team 0<br>
+
+Fashion Design and Technology<br>
+1st On Kwon Henry M. Jackson High Team 0 <br>
+1st Elizabeth Kim Henry M. Jackson High Team 0 <br>
+1st Lam Pham Henry M. Jackson High Team 0<br>
+
+Flight Endurance<br>
+1st Wilson Tam Henry M. Jackson High<br>
+3rd Marcus Amalachandran Henry M. Jackson High<br>
+
+Music Production<br>
+4th Hannah Han Henry M. Jackson High Team 0<br> 
+4th Pranav Shekar Henry M. Jackson High Team 0 <br>
+4th Lam Pham Henry M. Jackson High Team 0<br>
+
+Promotional Design<br>
+2nd Niha Gaddam Henry M. Jackson High<br>
+
+
+SciVis<br>
+3rd Sriharshita Musunuri Henry M. Jackson High Team 0<br>
+3rd Kirsten Allison Henry M. Jackson High Team 0 <br>
+3rd Claire Hsu Henry M. Jackson High Team 0 <br>
+3rd Iman Haji Henry M. Jackson High Team 0 <br>
+3rd Andrew Stratford Henry M. Jackson High Team 0<br>
+
+Software Development<br>
+4th Braden Whitman Henry M. Jackson High Team 0 <br>
+4th Elliot Cho Henry M. Jackson High Team 0 <br>
+4th Kevin Liang Henry M. Jackson High Team 0 <br>
+4th Derrick Choy Henry M. Jackson High Team 0 <br>
+4th Joon Woo Lee Henry M. Jackson High Team 0 <br>
+4th Rafael Sevilla Henry M. Jackson High Team 0<br>
+
+Technology Problem Solving<br>
+1st Anuj Vimawala Henry M. Jackson High Team 0<br>
+1st Samuel Wang Henry M. Jackson High Team 0<br>
+
+Video Game Design<br>
+5th Hannah Han Henry M. Jackson High Team 0<br>
+5th Yenny Park Henry M. Jackson High Team 0 <br>
+5th Stella Kim Henry M. Jackson High Team 0<br>
+ 5th Seo-yun Chon Henry M. Jackson High Team 0<br>
+
+
+
+
+
+Webmaster<br>
+1st Arkaprabha Bhattacharya Henry M. Jackson High Team 0<br> 
+1st Iman Haji Henry M. Jackson High Team 0 <br>
+1st Dhruvik Parikh Henry M. Jackson High Team 0<br> 
+1st Marcus Amalachandran Henry M. Jackson High Team 0<br>
+
 
           </p>
 
