--- a/tsa.html
+++ b/tsa.html
@@ -106,28 +106,29 @@ Architectural Design <br>
 
 4th Louis Ta Henry M. Jackson High Team 1<br>
 4th Iman Haji Henry M. Jackson High Team 1<br>
-4th Dhruvik Parikh Henry M. Jackson High Team 1<br>
+4th Dhruvik Parikh Henry M. Jackson High Team 1<br></p><p>
 
 Children’s Stories<br>
 5th Hannah Han Henry M. Jackson High Team 0<br> 
 5th Yenny Park Henry M. Jackson High Team 0 <br>
 5th Stella Kim Henry M. Jackson High Team 0 <br>
-5th Seo-yun Chon Henry M. Jackson High Team 0<br>
+5th Seo-yun Chon Henry M. Jackson High Team 0<br></p><p>
 
 Coding<br>
 3rd Kevin Liang Henry M. Jackson High Team 0<br> 
-3rd Marcus Amalachandran Henry M. Jackson High Team 0<br>
+3rd Marcus Amalachandran Henry M. Jackson High Team 0<br></p><p>
 
 Computer Integrated Manufacturing<br>
 4th Andrew Hyun Henry M. Jackson High Team 0<br>
- 4th Ryan Chu Henry M. Jackson High Team 0<br>
+ 4th Ryan Chu Henry M. Jackson High Team 0<br></p><p>
 
 Computer Aided Design 2d : Architecture<br>
-4th Andrew Hyun Henry M. Jackson High<br>
+4th Andrew Hyun Henry M. Jackson High<br></p><p>
 
 Debating Technological Issues<br>
 2nd Dhruvik Parikh Henry M. Jackson High Team 1<br> 
-2nd Ryan Chu Henry M. Jackson High Team 1<br>
+2nd Ryan Chu Henry M. Jackson High Team 1<br></p><p>
+
 Digital Video Production<br>
 1st Ryan Chu Henry M. Jackson High Team 2<br> 
 1st Dhruvik Parikh Henry M. Jackson High Team 2<br> 
@@ -137,24 +138,24 @@ Digital Video Production<br>
 
 3rd Lam Pham Henry M. Jackson High Team 0 <br>
 3rd Niha Gaddam Henry M. Jackson High Team 0 <br>
-3rd Pranav Shekar Henry M. Jackson High Team 0<br>
+3rd Pranav Shekar Henry M. Jackson High Team 0<br></p><p>
 
 Fashion Design and Technology<br>
 1st On Kwon Henry M. Jackson High Team 0 <br>
 1st Elizabeth Kim Henry M. Jackson High Team 0 <br>
-1st Lam Pham Henry M. Jackson High Team 0<br>
+1st Lam Pham Henry M. Jackson High Team 0<br></p><p>
 
 Flight Endurance<br>
 1st Wilson Tam Henry M. Jackson High<br>
-3rd Marcus Amalachandran Henry M. Jackson High<br>
+3rd Marcus Amalachandran Henry M. Jackson High<br></p><p>
 
 Music Production<br>
 4th Hannah Han Henry M. Jackson High Team 0<br> 
 4th Pranav Shekar Henry M. Jackson High Team 0 <br>
-4th Lam Pham Henry M. Jackson High Team 0<br>
+4th Lam Pham Henry M. Jackson High Team 0<br></p><p>
 
 Promotional Design<br>
-2nd Niha Gaddam Henry M. Jackson High<br>
+2nd Niha Gaddam Henry M. Jackson High<br></p><p>
 
 
 SciVis<br>
@@ -162,7 +163,7 @@ SciVis<br>
 3rd Kirsten Allison Henry M. Jackson High Team 0 <br>
 3rd Claire Hsu Henry M. Jackson High Team 0 <br>
 3rd Iman Haji Henry M. Jackson High Team 0 <br>
-3rd Andrew Stratford Henry M. Jackson High Team 0<br>
+3rd Andrew Stratford Henry M. Jackson High Team 0<br></p><p>
 
 Software Development<br>
 4th Braden Whitman Henry M. Jackson High Team 0 <br>
@@ -170,17 +171,17 @@ Software Development<br>
 4th Kevin Liang Henry M. Jackson High Team 0 <br>
 4th Derrick Choy Henry M. Jackson High Team 0 <br>
 4th Joon Woo Lee Henry M. Jackson High Team 0 <br>
-4th Rafael Sevilla Henry M. Jackson High Team 0<br>
+4th Rafael Sevilla Henry M. Jackson High Team 0<br></p><p>
 
 Technology Problem Solving<br>
 1st Anuj Vimawala Henry M. Jackson High Team 0<br>
-1st Samuel Wang Henry M. Jackson High Team 0<br>
+1st Samuel Wang Henry M. Jackson High Team 0<br></p><p>
 
 Video Game Design<br>
 5th Hannah Han Henry M. Jackson High Team 0<br>
 5th Yenny Park Henry M. Jackson High Team 0 <br>
 5th Stella Kim Henry M. Jackson High Team 0<br>
- 5th Seo-yun Chon Henry M. Jackson High Team 0<br>
+ 5th Seo-yun Chon Henry M. Jackson High Team 0<br></p><p>
 
 
 
@@ -190,7 +191,7 @@ Webmaster<br>
 1st Arkaprabha Bhattacharya Henry M. Jackson High Team 0<br> 
 1st Iman Haji Henry M. Jackson High Team 0 <br>
 1st Dhruvik Parikh Henry M. Jackson High Team 0<br> 
-1st Marcus Amalachandran Henry M. Jackson High Team 0<br>
+1st Marcus Amalachandran Henry M. Jackson High Team 0<br></p><p>
 
 
           </p>
