--- a/design.html
+++ b/design.html
@@ -65,11 +65,12 @@
           <hr>
 
           <h3> <strong>The truth is, we discovered long ago that when used correctly, AI can make our lives easier, but in order to take advantage of this, we need to take a look at what Artificial Intelligence IS. </strong></h3>
-
+<br>
 
           </div>
           <div id="medpic"><img src="./img/echo.jpg" width="90%"></div>
-          <p>
+          <br>
+          <p> <br>
             <strong>Artificial Intelligence:  </strong>the intelligence that a machine demonstrates unlike that of animals and humans. The machines are given jobs to do through programs created by humans to efficiently carry out actions that may be tedious for humans to sit through or quickly run through the data for businesses. What makes artificial intelligence so special is not only  regular computer programs is the machines’ ability to mimic human actions.
           </p>
 
@@ -106,39 +107,45 @@
         </div>
       </section>
       <section class="module">
-        <div class="emblem"><h1> Bold, Beautiful, Big </h1></div>
+        <div class="emblem"><h1> Xythe is the Robot Version of a Rennaissance Man </h1></div>
       </section>
       <section class="module content" id="comp">
-            <h2>Xythe is the Robot Version of a Rennaissance Man</h2>
 
-        <div class="right">
               <h2>Tech at Its Finest</h2>
 
-              </div>
         <p class="left">
           Model Xythe is a concept built on the idea of “standing on the shoulders of giants”. And therefore its uses are based on the shoulders of one of the biggest sources of information in our world: the Internet. Model Xythe is intended to be a revolution in student and business lifestyles, and its uses are optimized exactly to make these people's’ lives easier. From reading out the day’s schedule in the morning, to taking average travel time data to provide the best route from point A to B on a given day of a given year. From acting as a security robot that immediately alerts you of any fishy business within milliseconds of it occurring near your premises, to analyzing the type of music you listen to in order to provide the ideal playlist for the given time of the day. From acting as a proxy for teachers to upload lectures to for those days where you just cannot get out of bed, to being your notekeeper for business activities. Xythe is the ultimate secretary, sibling, teacher, and assistant a student or CEO could ever need.
 
 
         </p>
         <p class="right">
-        The technology we used in the development of this ai robot was based on a simple principle: make it work. We took the baseline structural compositions of robots from companies like Hanson Robotics (creator of media robot star Sophia) to basic roombas, and ran it through the most powerful creativity machine in our world: humans. We plotted and examined the nuances within each of these types of robots based in artificial intelligence, no matter how simple or how complex, and used it to create efficient structures that can be effective and simply utilized for various tasks under one “brain”. </br>
+        The technology we used in the development of this AI robot was based on a simple principle: make it work. We took the baseline structural compositions of robots from companies like Hanson Robotics (creator of media robot star Sophia) to basic roombas, and ran it through the most powerful creativity machine in our world: humans. We plotted and examined the nuances within each of these types of robots based in artificial intelligence, no matter how simple or how complex, and used it to create efficient structures that can be effective and simply utilized for various tasks under one “brain”.
+        <br>
+
         Not only do we plan on using AI based on optimized hardware, but Xythe comes with something that not many other robots can actively take advantage of: learning through conversation. Our robots are built to learn by conversing-- not only with owners and humans, but with other robots on a community/regional-based cloud network, where data from a simple weather forecast to a complex network of traffic times is shared, creating a collective base of knowledge that is constantly improving.
 
         </p>
-        <h2>The Fine Print, in Big Format</h2>
+        <br>
+              <h2>The Fine Print, in Big Format</h2>
          <p>
            Model Xythe is an ongoing project. Perfection never comes in one shot. More importantly, our drive to revolutionize how we go through our day, is something shared by millions, if not billions of other people all over the world. Some for malicious purposes, some for good reason. As a result, Xythe is pursuing a concept often seen currently in the car industry from makers such as Tesla, where the hardware can be a one time buy, while the real innovation comes from frequent software updates. We have dubbed this method of consumer distribution as the “One and Done” method.</br>
-
+<br>
            Hacking is something we take very seriously, and with the One and Done method, we set ourselves up for long term retaliation and protection against any and all malicious attempts for interrupting regular function of Xythe, whether it be on the consumer side or the database side. Frequent software and security updates create a constantly evolving protection against errors and allow consumers to trust that if there ever is an issue, whether it be a bug or malicious virtual disruption, it can be resolved without “bricking” the entire robot module. Our regionally independent consumer robot cloud network will allow us to target specific issues in isolated areas, and also allows for easier handling of issues. Revolution through software is the future, and we have fully embraced this aspect of consumerism, making it not only cheaper, but more sensible to buy a Xythe. </br>
            Our robot and AI engine strives to consistently abide by Isaac Asimov’s three laws of robotics:</br>
-
+<br>
             1. A robot may not injure a human being or, through inaction, allow a human being to come to harm.</br>
             2. A robot must obey orders given it by human beings except where such orders would conflict with the First Law. </br>
             3. A robot must protect its own existence as long as such protection does not conflict with the First or Second Law. </br>
-
+<br>
             We conform to these laws through our regionally independent cloud systems. Thriving within completely independent systems, connecting to the mainframe only for software updates, allows us to not only isolate issues in specific populations, but prevent anything from getting out of hand.  As a result, even the most paranoid of us can sleep soundly at night, knowing there will not be any potential secret robot meetings going on in our living room.
         </p>
-        <h2> Costs and Liabilities</h2>
+      </section>
+        <section class="module">
+          <div class="emblem"><h1> Costs and Liabilities </h1></div>
+        </section>
+
+        <section class="module content" id="costs">
+
         <p>
           We will be frank: The base asking price of Model Xythe is, $1500, which includes the robot, charging modules, lifetime software updates, a 2 year repair warranty, and a guide to taking full advantage of your new personal lifestyle assistant. </br>
           We as a company continually strive to provide the best service for our consumers, but one may ask, “what about the hardware? What if it breaks or malfunctions?”. </br>
@@ -148,6 +155,7 @@
           The warranty does not hold us liable for any modifications conducted by unapproved Jackson Robotics Solutions providers and any attempt to do so WILL void warranties. The asking price may seem high, but is necessary for the research and development of a field of study that is soon to be an important facet of our daily lives.  To order, contact us at 425-385-7000 or visit one of our contracted suppliers!
         </p>
         <h1>Join the revolution for greatness, join Xythe. </h1>
+
 
       </section>
 
