--- a/tsa.html
+++ b/tsa.html
@@ -139,7 +139,8 @@ Digital Video Production<br>
 3rd Lam Pham Henry M. Jackson High Team 0 <br>
 3rd Niha Gaddam Henry M. Jackson High Team 0 <br>
 3rd Pranav Shekar Henry M. Jackson High Team 0<br></p><p>
-
+        </div>
+<div id="awardsparttwo">
 Fashion Design and Technology<br>
 1st On Kwon Henry M. Jackson High Team 0 <br>
 1st Elizabeth Kim Henry M. Jackson High Team 0 <br>
@@ -172,7 +173,8 @@ Software Development<br>
 4th Derrick Choy Henry M. Jackson High Team 0 <br>
 4th Joon Woo Lee Henry M. Jackson High Team 0 <br>
 4th Rafael Sevilla Henry M. Jackson High Team 0<br></p><p>
-
+        </div>
+      <div id="awardspartthree">
 Technology Problem Solving<br>
 1st Anuj Vimawala Henry M. Jackson High Team 0<br>
 1st Samuel Wang Henry M. Jackson High Team 0<br></p><p>
