--- a/design.html
+++ b/design.html
@@ -89,6 +89,7 @@
           <p>
             <strong> Neural Networks: </strong>From a biological perspective, neural networks make up the backbone of our understanding of how the brain works on a daily basis, through learning. AI development has allowed this biological idea to be recreated on a virtual level, in a sense, mimicking the animal brain’s processes and improving upon it to create virtual systems that can essentially think for themselves. The advancement of neural networks has been a keystone facet in the development of rudimentary AI applications through machine learning, and has also been integrated into more complex systems such as Google’s DeepMind AI. Deep learning and its accompaniments also fall under the subset of machine learning, and create computers and virtual systems that are ever closer to being “human”.
           </p>
+          <img src="./img/NeuralNet.png" width="40%">
           <h2> This brings up the question, how "human" is too "human"?</h2>
 
       </section>
@@ -125,7 +126,7 @@
         Not only do we plan on using AI based on optimized hardware, but Xythe comes with something that not many other robots can actively take advantage of: learning through conversation. Our robots are built to learn by conversing-- not only with owners and humans, but with other robots on a community/regional-based cloud network, where data from a simple weather forecast to a complex network of traffic times is shared, creating a collective base of knowledge that is constantly improving.
 
         </p>
-        <br>
+        <img src="./img/Amazon Alex.jpg" width="50%">
               <h2>The Fine Print, in Big Format</h2>
          <p>
            Model Xythe is an ongoing project. Perfection never comes in one shot. More importantly, our drive to revolutionize how we go through our day, is something shared by millions, if not billions of other people all over the world. Some for malicious purposes, some for good reason. As a result, Xythe is pursuing a concept often seen currently in the car industry from makers such as Tesla, where the hardware can be a one time buy, while the real innovation comes from frequent software updates. We have dubbed this method of consumer distribution as the “One and Done” method.</br>
