--- a/design.html
+++ b/design.html
@@ -108,6 +108,39 @@
         </div>
       </section>
       <section class="module">
+        <div class="emblem"><h1>Potential Future Uses</h1></div>
+      </section>
+      <section class="module content" id="use">
+        <p>
+          Artificial Intelligence holds the potential to turn our world into the utopia we have dreamt of from our years in elementary school. Here are but a few uses that could culminate in the near future.
+        </p>
+        <br>
+        <div>
+        <p id="med">
+          Self-driving cars: Machine learning- based artificial intelligence systems can allow cars to essentially “learn the roads” for themselves, freeing up time for consumers to indulge in other, more important tasks. After all, who likes having to sit in a traffic jam in the middle of Seattle unable to go anywhere or do anything?
+
+        </p>
+        <img src="./img/car.jpg" id="medpic" width="100%">
+        </div>
+
+        <section class="module content" style="height:100px;">
+        <p>
+          Solving Global Issues: AI has the potential to help us solve issues ranging from global warming to rapid population growth. As humans, we only have so many numbers we can keep in our heads (yes, even the most intelligent of mathematicians still have limits). However, computers are essentially boundless. With a much larger array of data available, AI systems have a much better shot at running potential solution simulations for various global issues and producing the best solution for humanity.
+        </p>
+      </section>
+
+        <img src="./img/robot.jpg" id="med" width="100%">
+        <p id="medpic">
+          Robots: This has already been something being developed, coming into the mainstream with the introduction of smarter robots such as Sophia from Hanson Robotics. However, robots infused with AI have the potential to change how we wake up. Every. SIngle. Morning. They can take care of the most dangerous of jobs, they can help keep us up to date and accountable for our responsibilities. They can care for the elderly, and even provide company for us when we are lonely. Although a truly “humanoid” robot is still far away, it is this potential application that us developers at Jackson Robotics Solutions have chosen to pursue.
+        </p>
+        <hr>
+        <section class="module content" style="height:100px;">
+        <p>
+          Artificial Intelligence is a rapidly developing facet of our technology on an everyday basis. It is the key to unlocking the door to the future. To the worlds we only saw on our old television sets. To the worlds we only read about in novels. To the worlds we only touched and felt in our imagination. Using a variety of technological innovations in the field of computer science, artificial intelligence is being improved every day, based on concepts such as machine and deep learning. Using the basic theories of both human thought processing and philosophy, paired with the facets of computer science, our world is changing on the daily, and at the end of the day we felt it was up to us to take advantage of this.
+        </p>
+      </section>
+      </section>
+      <section class="module">
         <div class="emblem"><h1> Xythe is the Robot Version of a Rennaissance Man </h1></div>
       </section>
       <section class="module content" id="comp">
