--- a/cte.html
+++ b/cte.html
@@ -32,7 +32,7 @@
           <ul>
             <li><a href="cte.html" title"Next Section">CTE at Jackson</a></li>
             <li><a href="tsa.html" title="Next Section">Jackson TSA</a></li>
-            <li><a href="design.html" title="Next Section">Special Report: Augmented Reality</a></li>
+            <li><a href="design.html" title="Next Section">Special Report: Artificial Intelligence</a></li>
 
           </ul>
         </nav>
