--- a/tsa.html
+++ b/tsa.html
@@ -20,7 +20,7 @@
           <ul>
             <li><a href="cte.html" title"Next Section">CTE at Jackson</a></li>
             <li><a href="tsa.html" title="Next Section">Jackson TSA</a></li>
-            <li><a href="design.html" title="Next Section">Special Report: Augmented Reality</a></li>
+            <li><a href="design.html" title="Next Section">Special Report: Artificial Intelligence</a></li>
 
           </ul>
         </nav>
@@ -109,13 +109,13 @@ Architectural Design <br>
 4th Dhruvik Parikh Henry M. Jackson High Team 1<br></p><p>
 
 Children’s Stories<br>
-5th Hannah Han Henry M. Jackson High Team 0<br> 
+5th Hannah Han Henry M. Jackson High Team 0<br>
 5th Yenny Park Henry M. Jackson High Team 0 <br>
 5th Stella Kim Henry M. Jackson High Team 0 <br>
 5th Seo-yun Chon Henry M. Jackson High Team 0<br></p><p>
 
 Coding<br>
-3rd Kevin Liang Henry M. Jackson High Team 0<br> 
+3rd Kevin Liang Henry M. Jackson High Team 0<br>
 3rd Marcus Amalachandran Henry M. Jackson High Team 0<br></p><p>
 
 Computer Integrated Manufacturing<br>
@@ -126,12 +126,12 @@ Computer Aided Design 2d : Architecture<br>
 4th Andrew Hyun Henry M. Jackson High<br></p><p>
 
 Debating Technological Issues<br>
-2nd Dhruvik Parikh Henry M. Jackson High Team 1<br> 
+2nd Dhruvik Parikh Henry M. Jackson High Team 1<br>
 2nd Ryan Chu Henry M. Jackson High Team 1<br></p><p>
 
 Digital Video Production<br>
-1st Ryan Chu Henry M. Jackson High Team 2<br> 
-1st Dhruvik Parikh Henry M. Jackson High Team 2<br> 
+1st Ryan Chu Henry M. Jackson High Team 2<br>
+1st Dhruvik Parikh Henry M. Jackson High Team 2<br>
 1st Andrew Hyun Henry M. Jackson High Team 2 <br>
 1st Marcus Amalachandran Henry M. Jackson High Team 2 <br>
 1st Arkaprabha Bhattacharya Henry M. Jackson High Team 2<br>
@@ -139,7 +139,7 @@ Digital Video Production<br>
 3rd Lam Pham Henry M. Jackson High Team 0 <br>
 3rd Niha Gaddam Henry M. Jackson High Team 0 <br>
 3rd Pranav Shekar Henry M. Jackson High Team 0<br></p><p>
-        
+
 Fashion Design and Technology<br>
 1st On Kwon Henry M. Jackson High Team 0 <br>
 1st Elizabeth Kim Henry M. Jackson High Team 0 <br>
@@ -150,7 +150,7 @@ Flight Endurance<br>
 3rd Marcus Amalachandran Henry M. Jackson High<br></p><p>
 
 Music Production<br>
-4th Hannah Han Henry M. Jackson High Team 0<br> 
+4th Hannah Han Henry M. Jackson High Team 0<br>
 4th Pranav Shekar Henry M. Jackson High Team 0 <br>
 4th Lam Pham Henry M. Jackson High Team 0<br></p><p>
 
@@ -172,7 +172,7 @@ Software Development<br>
 4th Derrick Choy Henry M. Jackson High Team 0 <br>
 4th Joon Woo Lee Henry M. Jackson High Team 0 <br>
 4th Rafael Sevilla Henry M. Jackson High Team 0<br></p><p>
-       
+
 Technology Problem Solving<br>
 1st Anuj Vimawala Henry M. Jackson High Team 0<br>
 1st Samuel Wang Henry M. Jackson High Team 0<br></p><p>
@@ -188,9 +188,9 @@ Video Game Design<br>
 
 
 Webmaster<br>
-1st Arkaprabha Bhattacharya Henry M. Jackson High Team 0<br> 
+1st Arkaprabha Bhattacharya Henry M. Jackson High Team 0<br>
 1st Iman Haji Henry M. Jackson High Team 0 <br>
-1st Dhruvik Parikh Henry M. Jackson High Team 0<br> 
+1st Dhruvik Parikh Henry M. Jackson High Team 0<br>
 1st Marcus Amalachandran Henry M. Jackson High Team 0<br></p><p>
 
 
