--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <a href="design.html"><div id="slide5">
         <div class="container">
-          <h2 style="color: #333333;">Check out our special report on Augmented Reality!</h2>
+          <h2 style="color: #333333;">Check out our special report on Artificial Intelligence!</h2>
         </div>
       </div></a>
 
